--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1035,6 +1035,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1544,6 +1545,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -1561,7 +1563,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.102.89;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1671,7 +1672,6 @@ allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
-allow 91.139.160.150;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
