--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1523,6 +1523,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1672,6 +1673,7 @@ allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
+allow 91.139.160.150;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
