--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -873,6 +873,7 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
+allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
@@ -890,6 +891,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.102.89;
 allow 5.255.103.235;
 allow 5.255.104.202;
