--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -873,6 +873,7 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -890,6 +891,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.206;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.102.89;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
