--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -140,9 +140,9 @@ allow 15.204.238.148;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
-allow 154.213.187.66;
-allow 154.213.187.98;
 allow 154.26.159.157;
+allow 156.229.232.104;
+allow 156.229.232.98;
 allow 158.220.123.219;
 allow 160.119.249.240;
 allow 162.210.173.17;
@@ -510,6 +510,7 @@ allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.40.4.94;
 allow 185.42.170.203;
+allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
@@ -833,6 +834,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -861,7 +863,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1102,8 +1103,8 @@ allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
-allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:6cc4::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1448,7 +1449,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 3.76.125.118;
 allow 38.97.116.244;
-allow 4.189.65.75;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
