--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -337,8 +337,8 @@ deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:122:49::1;
-deny 2a05:b0c7:655b::1;
-deny 2a05:b0c7:6cc4::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 deny 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
 deny 2a06:1280:bee1:2::ee12:230;
