--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -141,9 +141,11 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 154.83.88.244;
 allow 156.229.232.104;
 allow 156.229.232.98;
 allow 158.220.123.219;
+allow 158.69.252.116;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -829,7 +831,6 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
-allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
@@ -863,6 +864,7 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -903,7 +905,6 @@ allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
@@ -991,6 +992,7 @@ allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:a140:2236:4415::1;
 allow 2605:aa80:0:9::3;
+allow 2607:5300:120:c74::1;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
@@ -1353,6 +1355,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:9400:7e11:8e09::1;
 allow 2a0f:df00:0:255::194;
@@ -1431,7 +1434,6 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
-allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1449,6 +1451,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 3.76.125.118;
 allow 38.97.116.244;
+allow 4.189.65.75;
 allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1510,6 +1513,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1535,8 +1539,6 @@ allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 47.243.99.161;
-allow 47.76.187.86;
 allow 5.104.86.6;
 allow 51.15.59.15;
 allow 51.195.166.174;
@@ -1606,7 +1608,6 @@ allow 72.235.129.116;
 allow 74.226.169.204;
 allow 74.82.47.194;
 allow 77.237.235.148;
-allow 77.37.3.7;
 allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
@@ -1619,7 +1620,6 @@ allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
-allow 8.218.9.41;
 allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
