--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -143,6 +143,8 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 156.229.232.104;
+allow 156.229.232.108;
+allow 156.229.232.115;
 allow 156.229.232.98;
 allow 158.220.123.219;
 allow 158.69.252.116;
@@ -795,6 +797,7 @@ allow 204.85.191.7;
 allow 204.85.191.8;
 allow 204.85.191.9;
 allow 205.185.113.180;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -822,7 +825,6 @@ allow 212.95.50.77;
 allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
-allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.64.151.73;
@@ -830,6 +832,7 @@ allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.137.248.100;
+allow 23.137.248.192;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -840,6 +843,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -901,6 +905,7 @@ allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
@@ -1104,12 +1109,13 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::3;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
@@ -1514,7 +1520,6 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1625,7 +1630,6 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
@@ -1655,7 +1659,6 @@ allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
-allow 89.37.95.34;
 allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
