--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -132,6 +132,7 @@ allow 2602:2e5::104;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
@@ -334,12 +335,13 @@ allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b87:500::3;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:122:49::1;
+allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:d014:1527:3400:10e:d620:3542:1bc9;
 allow 2a05:d014:1527:3400:fffe:9986:ac97:faeb;
